<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/following"
        android:icon="@drawable/ic_star_border_white_24dp"
        android:title="@string/filter_followed_series"
        android:checkable="true"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_account"
        android:icon="@drawable/ic_account_circle_white_24dp"
        android:title="@string/account"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/account_name"
                android:title="@string/not_logged_in"
                android:enabled="false" />
            <item
                android:id="@+id/account_login"
                android:title="@string/login" />
        </menu>
    </item>
</menu>